<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtShares"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/rect_edit_view"
        android:ems="10"
        android:hint="@string/txtShares"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:shadowColor="@android:color/darker_gray"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtSymbol"
        app:layout_constraintEnd_toStartOf="@+id/edtSymbol"
        app:layout_constraintStart_toStartOf="parent"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/edtSymbol"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/rect_edit_view"
        android:ems="10"
        android:hint="@string/txtSymbol"
        android:inputType="textNoSuggestions|textCapCharacters"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:shadowColor="@android:color/darker_gray"
        android:textCursorDrawable="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toEndOf="@+id/edtShares"
        app:layout_constraintTop_toTopOf="parent"
        android:imeOptions="actionSearch" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="84dp"
        android:layout_height="53dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="8dp"
        android:onClick="sendMessage"
        android:text="@string/txtSearch"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtSymbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtSymbol" />

    <View
        android:id="@+id/dividerOne"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerOne"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>